# rrd-rust

./: .dockerignore  .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  rrd-fedora.Dockerfile  rrd-ubuntu.Dockerfile
.github/actions/: quick-check.yaml
.github/actions/quick-check/: action.yaml
.github/workflows/: rust.yml
examples/: rrd-create.rs  rrd-fetch.rs  rrd-update.rs
librrd-sys/: Cargo.toml  build.rs
librrd-sys/src/: lib.rs
librrd-sys/src/pregen/: bindings.rs
scripts/: check-with-different-versions.sh  quick-check.sh
src/: data.rs  error.rs  lib.rs  ops.rs  rrd.rs  sys.rs  util.rs
src/ops/: create.rs  fetch.rs  graph.rs  info.rs  update.rs  version.rs
src/ops/graph/: commands.rs  elements.rs  mod.rs  props.rs
tests/: create.rs  minimal_graph.rs  tutorial.rs  version.rs
