[package]
name = "rrd"
version = "0.1.2"
edition = "2021"
authors = ["Mark Swaanenburg"]
license = "MIT/Apache-2.0"
keywords = ["rrd"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/rrd"
repository = "https://github.com/cygnus9/rrd-rust"
homepage = "https://github.com/cygnus9/rrd-rust"
description = """
Bindings to librrd to create and interact with round robin databases created with Tobias
Oetiker's rrdtool (https://www.rrdtool.org/).
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rrd-sys = { version = "0.1.0", path = "librrd-sys" }

bitflags = "2.6"
libc = "0.2"
thiserror = "2.0"
chrono = "0.4.39"

[dev-dependencies]
chrono = "0.4"
tempfile = "3.15.0"
anyhow = "1.0.95"
itertools = "0.14.0"