[package]
name = "rrd"
version = "0.2.1"
edition = "2021"
authors = ["Mark Swaanenburg", "Marshall Pierce"]
license = "MIT/Apache-2.0"
keywords = ["rrd"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/rrd"
repository = "https://github.com/cygnus9/rrd-rust"
homepage = "https://github.com/cygnus9/rrd-rust"
description = """
Bindings to librrd to create and interact with round robin databases created with Tobias
Oetiker's rrdtool (https://www.rrdtool.org/).
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rrd-sys = { version = "0.1.0", path = "librrd-sys" }

bitflags = "2.8.0"
thiserror = "2.0.11"
chrono = "0.4.39"
log = "0.4.25"
regex = "1.11.1"
itertools = "0.14.0"
nom = "7.1.3"

[dev-dependencies]
chrono = "0.4"
tempfile = "3.15.0"
anyhow = "1.0.95"
env_logger = "0.11.6"