[package]
name = "rrd-sys"
version = "0.1.2"
edition = "2021"
authors = ["Mark Swaanenburg", "Marshall Pierce"]
license = "MIT/Apache-2.0"
keywords = ["rrd", "sys"]
categories = ["external-ffi-bindings"]
readme = "../README.md"
documentation = "https://docs.rs/rrd"
repository = "https://github.com/cygnus9/rrd-rust"
homepage = "https://github.com/cygnus9/rrd-rust"
description = """
Bindings to librrd to create and interact with round robin databases created with Tobias
Oetiker's rrdtool (https://www.rrdtool.org/).
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.71.1"

[target.'cfg(macos)'.build-dependencies]
pkg-config = "0.3"

[target.'cfg(unix)'.build-dependencies]
pkg-config = "0.3"
